# 1234

./: .gitignore  CMakeLists.txt  bg_subtract.cpp  bg_subtract.h  common.cpp  common.h  fire_detect.cpp  fire_detect_final.cpp  fire_detect_ncnn.cpp  fire_protocol.h  hardware.cpp  hardware.h  main.cpp  sftp_watch.py  slaver_00_example.c  sync_to_board.ps1  sync_to_board.py  ui_draw.cpp  ui_draw.h  yolov8_infer.cpp  yolov8_infer.h  yy.cpp  项目总代码汇总.txt
scripts/: fire-detect.service  fire-web.service  install_services.sh  openamp-init.service  openamp-start.sh
slave_core/: Makefile  README.md  fire_protocol.h  hardware_control.c  hardware_control.h  main.c  rpmsg_handler.c  rpmsg_handler.h
web_server/: fire_web_server.py
